# researchops_python_mastery

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  PROJECT_SPEC.md  README.md  RELEASE_CHECKLIST.md  ROADMAP.md  SYLLABUS.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
curriculum/: NAVIGATION.md
curriculum/month-01-python-core/: README.md
curriculum/month-02-data-storage-concurrency/: README.md
curriculum/month-03-ml-engineering/: README.md
curriculum/month-04-ai-engineering-api-workers/: README.md
curriculum/month-05-production-portfolio/: README.md
curriculum/path-cards/: ai-engineering-path.md  architecture-path.md  beginner-path.md  debugging-path.md  ml-engineering-path.md  portfolio-path.md
docs/: CODE_WALKTHROUGH.md  CROSS_PLATFORM_SETUP.md
docs/decisions/: 0001-modular-monolith.md  0002-multiprocessing-vs-asyncio.md  0003-cli-before-api.md  adr-log.md
docs/diagrams/: README.md
docs/weekly-reports/: README.md
examples/sample_outputs/: README.md
examples/sample_papers/: README.md
scripts/: check_links.py  generate_week_report.py  setup_dev.py
src/researchops/: __init__.py
src/researchops/ai/: prompts.py
tests/e2e/: test_cli.py
tests/fakes/: fake_repository.py
tests/integration/: test_sqlite_repository.py
tests/unit/: test_exceptions.py  test_hashing.py  test_ingestion_service.py  test_metadata_extractor.py  test_models.py  test_paper_service.py  test_paths.py  test_sanity.py  test_search_service.py  test_serialization.py  test_text_cleaner.py  test_value_objects.py
(+157 files in other folders)
